--- a/index.html
+++ b/index.html
@@ -20,52 +20,50 @@
                 <li><a href="">About us</a></li>
             </ul>
         </nav>
-    </header>
-    <!--Блок герой-->
-    <main>
-        <section>
-            <h1>Virtual healthcare for you</h1>
+        <h1>Virtual healthcare for you</h1>
             <p>Trafalgar provides progressive, and affordable healthcare, accessible on mobile and online for everyone</p>
             <button>Consult today</button>
-        </section>
+    </header>
+
+    <main>
     <!--Сервис компании -->
     <section>
         <h2>Our services</h2>
         <p>We provide to you the best choiches for you. Adjust it to your health needs and make sure your undergo treatment with our highly qualified doctors you can consult with us which type of service is suitable for your health</p>
   <ul> 
         <li>
-            <img src="./img/tools/tool.png" width="92" alt="картинка лупы">
+            <img src="./img/tools/tool.png" width="92" alt="magnifier photo">
             <h3>Search doctor</h3>
             <p>Choose your doctor from thousands of specialist, general, and trusted hospitals</p>
         </li>
 
         <li>
-            <img src="./img/tools/bank.png" width="62" alt="картинка банки">
+            <img src="./img/tools/bank.png" width="62" alt="jar photo">
             <h3>Online pharmacy</h3>
             <p>Buy  your medicines with our mobile application with a simple delivery system</p>
         </li>
 
         <li>
-            <img src="./img/tools/aplication.form.png" width="67" alt="картинка лупы">
+            <img src="./img/tools/aplication.form.png" width="67" alt="photo of application form">
             <h3>Consultation</h3>
             <p>Free consultation with our trusted doctors and get the best recomendations</p>
         </li>
 
         <li>
-            <img src="./img/tools/blank.png" width="67" alt="картинка планшета">
+            <img src="./img/tools/blank.png" width="67" alt="photo of application form">
             <h3>Details info</h3>
             <p>Free consultation with our trusted doctors and get the best recomendations</p>
         </li>
 
         <li>
-            <img src="./img/tools/suitcase.png" width="80" alt="картинка чемодана">
+            <img src="./img/tools/suitcase.png" width="80" alt="suitcase photo">
             <h3>Emergency care</h3>
             <p>You can get 24/7 urgent care for yourself or your children and yourlovely family</p>
                 
         </li>
 
         <li>
-            <img src="./img/tools/frame-example.png" width="69" alt="картинка лупы">
+            <img src="./img/tools/frame-example.png" width="69" alt="photo of application form">
             <h3>Tracking</h3>
             <p>Track and save your medical history and health data </p>
         </li>
@@ -77,13 +75,13 @@
     <section>
         <ul>
             <li>
-                <img src="./img/adventages/photo.jpg" width="650" alt="фото преимущества">
+                <img src="./img/adventages/photo.jpg" width="650" alt="advantages">
                 <h2>Leading healthcare providers</h2>
                 <p>Trafalgar provides progressive, and affordable healthcare, accessible on mobile and online for everyone. To us, it’s not just work. We take pride in the solutions we delive</p>
                 <button>Learn more</button>  
             </li>
             <li>
-                <img src="./img/adventages/photo2.jpg" width="665" alt="фото преимущества">
+                <img src="./img/adventages/photo2.jpg" width="665" alt="advantages">
                 <h2>Download our mobile apps</h2>
                  <p>Our dedicated patient engagement app and web portal allow you to access information instantaneously (no tedeous form, long calls,or administrative hassle) and securely</p>  
                   <button>Download</button>  
@@ -94,7 +92,7 @@
     <section>
         
         <h2>What our customer are saying</h2>
-        <img src="./img/cust-testimonial/customer.png" width="133" alt="отзыв потребителя">
+        <img src="./img/cust-testimonial/customer.png" width="133" alt="customers testimonials">
         <h3>Edward Newgate</h3>
         <p>Founder Circle</p>
          <p>“Our dedicated patient engagement app and web portal allow you to access information instantaneously (no tedeous form, long calls,or administrative hassle) and securely”</p>    
@@ -126,7 +124,7 @@
     </section>
     <!--Подвал-->
     <footer>
-        <img src="./img/logo-folder/logo2.png" alt="логотип компании">
+        <img src="./img/logo-folder/logo2.png" alt="logo">
         <p>Trafalgar</p>
         <p>Trafalgar provides progressive, and affordable healthcare, accessible on mobile and online for everyone</p> 
         <p>&copy;Trafalgar PTY LTD 2020. All rights reserved</p>
