--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <!--Шапка-->
     <header>
-        <img src="./img/logo.png" alt="логотип фирмы">
+        <img src="./img/logo.png" alt="firm logo">
         <p>Trafalgar</p>
 
         <nav>
@@ -128,28 +128,28 @@
         <p>Trafalgar</p>
         <p>Trafalgar provides progressive, and affordable healthcare, accessible on mobile and online for everyone</p> 
         <p>&copy;Trafalgar PTY LTD 2020. All rights reserved</p>
+          <h3><a href="#" >Company</a></h3>
         <ul>
-            <li>
-                <h3>Company</h3>
-                <span>About</span>
-                <span>Testimonials</span>
-                <span>Find a doctor</span>
-                <span>Apps</span>
-            </li>
-            <li>
-                <h3>Region</h3>
-                <span>Indonesia</span>
-                <span>Singapore</span>
-                <span>Hongkong</span>
-                <span>Canada</span>
-            </li>
-            <li>
-                <h3>Help</h3>
-                <span>Help center</span>
-                <span>Contact support</span>
-                <span>Instructions</span>
-                <span>How it works</span>
-            </li>
+                <li>About</li>
+                <li>Testimonials</li>
+                <li>Find a doctor</li>
+                <li>Apps</li>
+        </ul>
+          <h3><a href="#">Region</a></h3>
+        <ul>
+            
+                <li>Indonesia</li>
+                <li>Singapore</li>
+                <li>Hongkong</li>
+                <li>Canada</li>
+        </ul>
+            <h3><a href="#">Help</a></h3>
+        <ul>
+            <li>Help center</li>
+            <li>Contact support</li>
+            <li>Instructions</li>
+            <li>How it works</li>
+            
         </ul>
     </footer>
     </main>
